[package]
name = "ha_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
lru_time_cache = "0.11"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.*", features = ["full"] }
axum = "0.8.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
